# data-transformer

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml  tasks
macros/: example_macro.sql
scripts/: api_helper.py  generate_models.py  model_writer.py  table_builder.py  table_registry.py  tables.py
tests/: test_example_model.py
