[project]
name = "data-transformer"
version = "0.1.0"
description = "SQLMesh project using uv"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlmesh",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic",
    "python-dotenv",
    "pytest",
    "coverage",
    "ruff",
    "mypy",
    "pre-commit",
    "requests",
]

[tool.sqlmesh]
config = "sqlmesh.yaml"

[tool.pytest.ini_options]
pythonpath = [ "." ]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I"]  # errors, flakes, import order

[tool.black]
line-length = 88

[tool.mypy]
strict = true

[tool.setuptools.packages.find]
where = ["scripts"]